--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,7 +58,9 @@ jobs:
       - checkout
       - restore_cache:
           keys: [backend-build]
-      command: |
+      - run:
+          name: Run backend test
+          command: |
             cd backend
             npm install
             npm run tests
