--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,7 +66,35 @@ jobs:
             npm install
             npm run test
            
-            
+  scan-frontend:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - restore_cache:
+          keys: [frontend-build]
+      - run: 
+          name: Run frontend scan for vulnerablilties
+          command: |
+            cd frontend
+            npm install
+          # npm install oauth-sign@^0.9.0
+            npm audit --audit-level=critical
+
+  scan-backend:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout 
+      - restore_cache:
+          keys: [backend-build]
+      - run:
+          name: Run backend scan for vulnerabilities
+          command: |
+            cd backend
+            npm install
+          # npm install oauth-sign@^0.9.0
+            npm audit --audit-level=critical
 workflows:
   default:
     jobs:
@@ -76,4 +104,7 @@ workflows:
           requires: [build-frontend]
       - test-backend:
           requires: [build-backend]    
-      
+      - scan-backend:
+          requires: [build-backend]
+      - scan-frontend: 
+          requires: [build-frontend]    
