--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,22 @@ commands:
             aws s3 rm s3://udapeople-<<parameters.Workflow_ID>> --recursive
             aws cloudformation delete-stack --stack-name udapeople-frontend-<< parameters.Workflow_ID >>
             aws cloudformation delete-stack --stack-name udapeople-backend-<< parameters.Workflow_ID >>
+  install_awscli:
+    description: Installing AWS CLI v2
+    steps:
+      - run:
+          name: Install AWS VLI v2
+          command: |
+            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+            unzip awscliv2.zip
+            sudo ./aws/install
+  install_ansible:
+    description: Installation of Ansible     
+    steps:
+      - run:
+          name: Install Ansible
+          command: |
+            python3 -m pip install --user ansible     
   revert-migrations:
     description: Revert the last migration if successfully run in the current workflow.
     parameters:
@@ -172,6 +188,30 @@ jobs:
           root: ~/
           paths:
             - project/.circleci/ansible/inventory.txt
+  configure-infrastructure:
+    docker:
+      - image: cimg/python:3.10
+    steps:
+      - checkout
+      - add_ssh_keys:
+          fingerprints: ["24:18:4a:00:d3:99:96:97:24:48:8a:d6:29:ad:2e:7e"]
+      - attach_workspace:
+          at: ~/
+      - run:
+          name: Install dependencies
+          command: |
+            - install_awscli
+            - install_ansible
+            
+      - run:
+          name: Configure server
+          command: |
+            cd .circleci/ansible
+            cat inventory.txt
+
+            ansible-playbook -i inventory.txt configure-server.yml
+            
+      - destroy-environment                
                       
 workflows:
   default:
@@ -191,4 +231,5 @@ workflows:
           filters:
             branches:
               only: [master]
-      
+      - configure-infrastructure:
+          requires: [deploy-infrastructure]     
