--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -202,7 +202,7 @@ jobs:
           command: |
             - install_awscli
             - install_ansible
-            
+            - yum install -y tar gzip
       - run:
           name: Configure server
           command: |
