--- a/.circleci/files/backend.yml
+++ b/.circleci/files/backend.yml
@@ -40,7 +40,7 @@ Resources:
           Value: !Sub backend-${ID}
 
     InstanceEIP:
-      Type: AWS:EC2:EIP
+      Type: AWS::EC2::EIP
       Properties:
         Domain: vpc
         InstanceId: !Ref EC2Instance
