--- a/.circleci/files/backend.yml
+++ b/.circleci/files/backend.yml
@@ -22,7 +22,7 @@ Resources:
           ToPort: 3030
           CidrIp: 0.0.0.0/0
         - IpProtocol: tcp
-          Fromport: 9100
+          FromPort: 9100
           ToPort: 9100
           CidrIp: 0.0.0.0/.
   EC2Instance:
