--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -3,7 +3,7 @@
   shell: |
   # Install Node.js LTS version as base Node.js version
   curl -fsSL https://deb.nodesource.com/setup_lts.x | sudo -E bash -
-  sudo apt-get install -y node.js
+  sudo apt-get install -y nodejs
 
   # Use n versin manager to use Node.js v13.8.0
   sudo npm install -g n
