--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -194,7 +194,7 @@ jobs:
   
   configure-infrastructure:
     docker:
-      - image: cimg/base:current
+      - image: cimg/python:3.10
     steps:
       - checkout
       - add_ssh_keys:
