--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -5,7 +5,7 @@
     curl -fsSL https://deb.nodesource.com/setup_lts.x  | sudo -E bash -
     sudo apt-get install -y nodejs
 
-    # Use n versin manager to use Node.js v13.8.0
+    # Use n version manager to use Node.js v13.8.0
     sudo npm install -g n
     sudo n 13.8.0
 
