--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,13 @@ commands:
 
             sudo npm install --global n
             sudo n 13.8.0 
-
+  
+  install_python:
+    description: Install Python 3.10
+    steps:
+      - run:
+          name: installing python 3.10
+          command: sudo apt-get install python3.10
   revert-migrations:
     description: Revert the last migration if successfully run in the current workflow.
     parameters:
@@ -58,13 +64,12 @@ commands:
           when: on_fail
           command: |
             SUCCESS=$(curl --insecure  https://kvdb.io/${KVDB_BUCKET}/migration_<< parameters.Workflow_ID >>)
-            SUCCESS = 1
+            
             if(( $SUCCESS==1 )); 
             then
               cd ~/project/backend
               npm install
               npm run migration:revert
-              exit 1
             fi
 jobs:
   build-frontend:
@@ -247,7 +252,7 @@ jobs:
             cd backend
             npm install
             npm run migrations > migrations_dump.txt
-            cat migrations_dump.txt
+            #cat migrations_dump.txt
       - run:
           name: Send migration results to KVDB.io
           command: |
@@ -258,7 +263,79 @@ jobs:
               echo "No migrations are pending" 
             fi
       - destroy-environment
-      - revert-migrations      
+      - revert-migrations 
+  deploy-frontend:
+    docker:
+      - image: amazon/aws-cli
+       
+    steps:
+      - checkout
+      - attach_workspace:
+          at: ~/
+      - install_awscli
+      - install_nodejs
+      - install_ansible
+      - install_python        
+      - run:
+          name: Install dependencies
+          command: |
+            cd frontend
+            npm install
+      - run:
+          name: Get backend url
+          command: |
+            BACKEND_IP=$(aws ec2 describe-instances \
+            --filters "Name=tag:Name,Values=backend-<IDENTIFIER>" \
+            --query 'Reservations[*].Instances[*].PublicIpAddress' \
+            --output text)
+            export API_URL="http://${BACKEND_IP}:3030"
+            echo "API_URL = ${API_URL}"
+            echo API_URL="http://${BACKEND_IP}:3030" >> frontend/.env
+            cat frontend/.env
+      - run:
+          name: Deploy frontend objects
+          command: |
+            cd frontend
+            npm install
+            npm run build
+            tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
+            aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
+      - destroy-environment
+      - revert-migrations  
+
+  deploy-backend:
+    docker:
+      - image: cimg/base/current
+    steps:
+      - checkout
+      - add_ssh_keys:
+          fingerprints: ["24:18:4a:00:d3:99:96:97:24:48:8a:d6:29:ad:2e:7e"]
+      - attach_workspace:
+          at: ~/
+      - install_awscli
+      - install_nodejs
+      - install_ansible 
+      - run:
+          name: Install dependencies
+          command: |
+            cd backend
+            npm install
+            yum install -y tar gzip
+      - run:
+          name: Deploy backend
+          command: |
+            cd backend
+            npm i
+            npm run build
+            cd ..
+            # Zip the directory
+            tar -C backend -czvf artifact.tar.gz .
+            cd .circleci/ansible
+            echo "Contents  of the inventory.txt file is -------"
+            cat inventory.txt
+            ansible-playbook -i inventory.txt deploy-backend.yml
+      - destroy-environment 
+         
                     
                       
 workflows:
