--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -272,6 +272,8 @@ jobs:
       - checkout
       - attach_workspace:
           at: ~/
+      - restore_cache:
+          keys: [backend-build]
       - install_awscli
       - install_nodejs
       - install_ansible
@@ -359,4 +361,8 @@ workflows:
       - configure-infrastructure:
           requires: [deploy-infrastructure]
       - run-migrations:
-          requires: [configure-infrastructure]         
+          requires: [configure-infrastructure] 
+      - deploy-frontend:
+          requires: [run-migrations]
+      - deploy-backend:
+          requires: [run-migrations]            
