--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -239,7 +239,7 @@ jobs:
 
   run-migrations:
     docker:
-      - image: cimg/python:3.10
+      - image: circleci/node:13.8.0
     steps:
       - checkout
       - install_awscli
@@ -252,7 +252,7 @@ jobs:
             cd backend
             npm install
             npm run migrations > migrations_dump.txt
-            #cat migrations_dump.txt
+            cat migrations_dump.txt
       - run:
           name: Send migration results to KVDB.io
           command: |
