--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -239,13 +239,11 @@ jobs:
 
   run-migrations:
     docker:
-      - image: circleci/node:13.8.0
+      - image: cimg/python:3.10.5-node
     steps:
       - checkout
       - install_awscli
       - install_nodejs
-      - restore_cache:
-          keys: [backend-build]
       - run:
           name: Run migrations
           command: |
