--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -266,8 +266,10 @@ jobs:
             cd backend
             npm install
             # npm install oauth-sign@^0.9.0
-            npm audit fix 
-            npm audit fix 
+            npm fund
+            npm audit fix --audit-level=critical --force
+            npm audit fix --audit-level=critical --force
+             
 
       - destroy-environment
       - revert-migrations 
