--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -253,8 +253,8 @@ jobs:
             cd backend
             npm fund
             npm install
-            npm audit fix --audit-level=critical --force
-            npm audit fix --audit-level=critical --force
+            npm audit fix --audit-level=critical 
+            npm audit fix --audit-level=critical 
             npm run migrations > migrations_dump.txt
             cat migrations_dump.txt
             
