--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -240,7 +240,7 @@ jobs:
 
   run-migrations:
     docker:
-      - image: cimg/python:3.10.5-node
+      - image: cimg/python:3.10
     steps:
       - checkout
       - install_awscli
@@ -251,10 +251,10 @@ jobs:
           name: Run migrations
           command: |
             cd backend
-            npm fund
+            
             npm install
-            npm audit fix --audit-level=critical 
-            npm audit fix --audit-level=critical 
+            
+            npm audit fix --audit-level=critical --force
             npm run migrations > migrations_dump.txt
             cat migrations_dump.txt
             
