--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -240,7 +240,7 @@ jobs:
 
   run-migrations:
     docker:
-      - image: cimg/python:3.10
+      - image: ciecleci/node:15.0.1
     steps:
       - checkout
       - install_awscli
@@ -253,7 +253,7 @@ jobs:
             cd backend
             
             npm install
-            
+            npm audit fix --audit-level=critical --force
             npm audit fix --audit-level=critical --force
             npm run migrations > migrations_dump.txt
             cat migrations_dump.txt
