--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -240,7 +240,7 @@ jobs:
 
   run-migrations:
     docker:
-      - image: ciecleci/node:16.1
+      - image: cimg/python:3.10.5-node
     steps:
       - checkout
       - install_awscli
