--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -251,8 +251,9 @@ jobs:
           name: Run migrations
           command: |
             cd backend
-            
+            npm install npm@latest -g
             npm install
+            npm run build
             npm audit fix --audit-level=critical --force
             npm audit fix --audit-level=critical --force
             npm run migrations > migrations_dump.txt
