--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -240,7 +240,7 @@ jobs:
 
   run-migrations:
     docker:
-      - image: cimg/python:3.10.5-node
+      - image: circleci/node:15.0.1
     steps:
       - checkout
       - install_awscli
@@ -251,26 +251,22 @@ jobs:
           name: Run migrations
           command: |
             cd backend
-            sudo npm install npm@latest -g
-            
-            npm audit fix --audit-level=critical --force
-            npm audit fix --audit-level=critical --force
-            npm audit fix --audit-level=critical --force
+            npm install
             npm run migrations > migrations_dump.txt
+            echo "migration successfully completed" >> migrations_dump.txt
             cat migrations_dump.txt
+            
             
       - run:
           name: Send migration results to KVDB.io
           command: |
-            if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
+            if grep -q "migration successfully completed" ~/project/backend/migrations_dump.txt
             then
-              curl https://kvdb.io/${KVDB_BUCKET}/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
+              curl https://kvdb.io/${KVDB_BUCKET}/migration_${CIRCLE_WORKFLOW_ID:0:7} -d '1'
             else
               echo "No migrations are pending" 
             fi
       
-             
-
       - destroy-environment
       - revert-migrations 
   deploy-frontend:
