--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,7 +1,15 @@
 ---
+- name: "Unarchive backend files"
+  unarchive:
+    src: artifact.tar.gz
+    dest: ~/backend-app
+- name: "Installing Node Dependencies"
+  shell: |
+    npm i          
+
 
 - name: "Pre-start"
   shell: |
       npm install
       pm2 stop default
-      pm2 start npm -- start
+      pm2 start npm -- start    
