--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -276,10 +276,8 @@ jobs:
           at: ~/
       - restore_cache:
           keys: [backend-build]
-      - install_awscli
-      - install_nodejs
-      - install_ansible
-      - install_python        
+      
+      - install_ansible       
       - run:
           name: Install dependencies
           command: |
@@ -289,7 +287,7 @@ jobs:
           name: Get backend url
           command: |
             BACKEND_IP=$(aws ec2 describe-instances \
-            --filters "Name=tag:Name,Values=backend-<IDENTIFIER>" \
+            --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
             --query 'Reservations[*].Instances[*].PublicIpAddress' \
             --output text)
             export API_URL="http://${BACKEND_IP}:3030"
