--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -272,6 +272,9 @@ jobs:
        
     steps:
       - checkout
+      - run:
+          name: Install tar and gzip
+          command: yum install -y tar gzip
       - attach_workspace:
           at: ~/
       - restore_cache:
@@ -307,7 +310,7 @@ jobs:
 
   deploy-backend:
     docker:
-      - image: cimg/base/current
+      - image: amazon/aws-cli
     steps:
       - checkout
       - add_ssh_keys:
@@ -336,7 +339,8 @@ jobs:
             echo "Contents  of the inventory.txt file is -------"
             cat inventory.txt
             ansible-playbook -i inventory.txt deploy-backend.yml
-      - destroy-environment 
+      - destroy-environment
+      - revert-migrations 
          
                     
                       
