--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -286,15 +286,15 @@ jobs:
       - run:
           name: Get backend URL      
           command: |
-              export BACKEND_IP=$(aws ec2 describe-instances \
-              --query 'Reservations[*].Instances[*].PublicIpAddress' \
-              --filters "Name=tag:aws:cloudformation:stack-name", ,Values=udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
-              --output text)
-              echo "API_URL = ${API_URL}"
-              echo API_URL="http://{$BACKEND_IP}:3030" >> frontend/.env          
-              cat frontend/ .env
-              # - restore_cache:
-              #     keys: [frontend-build]
+            export BACKEND_IP=$(aws ec2 describe-instances \
+            --query 'Reservations[*].Instances[*].PublicIpAddress' \
+            --filters "Name=tag:aws:cloudformation:stack-name", ,Values=udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+            --output text)
+            echo "API_URL = ${API_URL}"
+            echo API_URL="http://{$BACKEND_IP}:3030" >> frontend/.env          
+            cat frontend/ .env
+            # - restore_cache:
+            #     keys: [frontend-build]
       - run:
           name: Deploy frontend objects
           command: |
@@ -303,7 +303,7 @@ jobs:
             npm run build
             tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
             aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
-      - destroy-environment:
+      - destroy-environment
           
       - revert-migrations  
 
