--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -288,7 +288,7 @@ jobs:
           command: |
             export BACKEND_IP=$(aws ec2 describe-instances \
             --query 'Reservations[*].Instances[*].PublicIpAddress' \
-            --filters "Name=tag:aws:cloudformation:stack-name", ,Values=udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+            --filters "Name=tag:aws:cloudformation:stack-name ,Values=udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
             --output text)
             echo "API_URL = ${API_URL}"
             echo API_URL="http://{$BACKEND_IP}:3030" >> frontend/.env          
@@ -323,8 +323,8 @@ jobs:
           name: Install dependencies
           command: |
             cd backend
-            npm install
-            apk add --update tar gzip nodejs npm curl 
+            apk add --update tar gzip nodejs npm curl
+            npm install 
       - run:
           name: Install awscli
           command: |
