--- a/.circleci/files/backend.yml
+++ b/.circleci/files/backend.yml
@@ -10,7 +10,7 @@ Resources:
   InstanceSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
-      GroupName: !Sub UdaPeople-${ID}
+      GroupName: !Sub Udapeople-backend-${ID}
       GroupDescription: Allow port 22 and port 3030 and port 9100.
       SecurityGroupIngress:
         - IpProtocol: tcp
@@ -37,6 +37,6 @@ Resources:
       ImageId: ami-052efd3df9dad4825 
       Tags:
         - Key: Name
-          Value: !Sub backend-${ID}
+          Value: !Sub udapeople-backend-${ID}
 
     
