--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -205,8 +205,8 @@ jobs:
           command: |
             cd ./.circleci/ansible
             aws ec2 describe-instances \
-            --filters "Name=tag:Name,Values=udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
             --query 'Reservations[*].Instances[*].PublicIpAddress' \
+            --filters "Name=tag:aws:cloudformation:stack-name ,Values=udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
             --output text >> inventory.txt
 
             
