--- a/.circleci/files/frontend.yml
+++ b/.circleci/files/frontend.yml
@@ -22,13 +22,16 @@ Resources:
       Bucket: !Ref WebsiteBucket
       PolicyDocument:
         Statement:
-        - Sid: PublicReadForGetBucketObjects
-          Effect: Allow
-          Principal: '*'
-          Action: s3:GetObject
-                  s3:PutObject
-                  s3:PutObjectAcl
-          Resource: !Join ['', ['arn:aws:s3:::', !Ref 'WebsiteBucket', /*]]
+        #- Sid: PublicReadForGetBucketObjects
+        #  Effect: Allow
+        #  Principal: '*'
+        #  Action: s3:GetObject
+        #          s3:PutObject
+         #         s3:PutObjectAcl
+          - Sid:  AllowAllObjects
+            Effect: Allow,
+            Action: s3:*Object
+            Resource: !Join ['', ['arn:aws:s3:::', !Ref 'WebsiteBucket', /*]]
 
 Outputs:
   WebsiteURL:
