--- a/.circleci/files/frontend.yml
+++ b/.circleci/files/frontend.yml
@@ -29,7 +29,7 @@ Resources:
         #          s3:PutObject
          #         s3:PutObjectAcl
           - Sid:  AllowAllObjects
-            Effect: Allow,
+            Effect: Allow
             Action: s3:*Object
             Resource: !Join ['', ['arn:aws:s3:::', !Ref 'WebsiteBucket', /*]]
 
