--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -242,32 +242,33 @@ jobs:
 
   run-migrations:
     docker:
-      - image: circleci/node:15.0.1
+      - image: circleci/node:13.8.0
+      # Docker image here that supports NodeJS
     steps:
       - checkout
-      
+      # - run:
+      #     name: Install deps
+      #     command: |
+      #       apk add --update --no-cache tar gzip nodejs npm aws-cli curl      
       - restore_cache:
           keys: [backend-build]
-      - run:
-          name: Run migrations
+      - run:  
+          name: Run Migration
           command: |
             cd backend
             npm install
             npm run migrations > migrations.txt
-            #ls -al
+            # ls -al
             cat migrations.txt
       - run:
-          name: Send migration results to KVDB.io
+          name: Send migration results to kvdb
           command: |
-            if grep -q "migration successfully completed" ~/project/backend/migrations_dump.txt
+            if grep -q "has been executed successfully." ~/project/backend/migrations.txt
             then
-              curl https://kvdb.io/${KVDB_BUCKET}/migration_${CIRCLE_WORKFLOW_ID:0:7} -d '1'
-            else
-              echo "No migrations are pending" 
-            fi
-      
-      - destroy-environment
-      - revert-migrations 
+              curl  https://kvdb.io/Et2YY1zaLRkzQYqa567g5d/migration_${CIRCLE_WORKFLOW_ID:0:7} -d '1'
+            fi  
+      - destroy-environment:  
+           
   deploy-frontend:
     docker: 
       - image: python:3.7-alpine3.16
@@ -310,27 +311,21 @@ jobs:
 
   deploy-backend:
     docker:
-      - image: python:3.7-alpine3.16
+      - image:  python:3.10-alpine3.16
     steps:
       - checkout
       - add_ssh_keys:
           fingerprints: ["24:18:4a:00:d3:99:96:97:24:48:8a:d6:29:ad:2e:7e"]
-      #- run:
-       #   name: Install tar and gzip
-         # command: yum install -y tar gzip
       - attach_workspace:
           at: ~/
-      #- run:
-      #    name: Install dependencies
-      #    command: |
-      #      cd backend
-      #      apk add --update tar gzip nodejs npm curl
-      #      npm install 
       - run:
-          name: Install awscli
+          name: Install dependencies
+          command: |
+            apk add --update  tar gzip nodejs npm ansible curl aws-cli
+      - run:
+          name: Install aws cli
           command: |
             pip install awscli
-
       - run:
           name: Deploy backend
           command: |
@@ -340,12 +335,15 @@ jobs:
             cd ..
             # Zip the directory
             tar -C backend -czvf artifact.tar.gz .
+            mkdir -p ~/project/.circleci/ansible/roles/deploy/files/
+            mv artifact.tar.gz .circleci/ansible/roles/deploy/files/artifact.tar.gz
             cd .circleci/ansible
             echo "Contents  of the inventory.txt file is -------"
             cat inventory.txt
             ansible-playbook -i inventory.txt deploy-backend.yml
-      - destroy-environment
-      - revert-migrations 
+      - destroy-environment:
+      - revert-migrations:
+          
          
                     
                       
