--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -265,13 +265,14 @@ jobs:
           command: |
             if grep -q "has been executed successfully." ~/project/backend/migrations.txt
             then
-              curl  https://kvdb.io/Et2YY1zaLRkzQYqa567g5d/migration_${CIRCLE_WORKFLOW_ID:0:7} -d '1'
+              curl  https://kvdb.io/WMGAGb51qQNfJwxmqQ4c8a/migration_${CIRCLE_WORKFLOW_ID:0:7} -d '1'
             fi  
       - destroy-environment:  
-           
+             
+
   deploy-frontend:
-    docker: 
-      - image: python:3.7-alpine3.16
+    docker:
+     - image: python:3.7-alpine3.16
     steps:
       - checkout
       - attach_workspace:
@@ -279,23 +280,23 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            apk add --update tar gzip nodejs npm curl
+            apk add --update  tar gzip nodejs npm ansible curl
       - run:
-          name: Install awscli
+          name: Install aws cli
           command: |
             pip install awscli
       - run:
-          name: Get backend URL      
+          name: Get backend url
           command: |
             export BACKEND_IP=$(aws ec2 describe-instances \
-            --query 'Reservations[*].Instances[*].PublicIpAddress' \
-            --filters "Name=tag:aws:cloudformation:stack-name ,Values=udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
-            --output text)
+              --query 'Reservations[*].Instances[*].PublicIpAddress' \
+              --filters "Name=tag:aws:cloudformation:stack-name,Values=udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+              --output text)
             echo "API_URL = ${API_URL}"
-            echo API_URL="http://{$BACKEND_IP}:3030" >> frontend/.env          
+            echo API_URL="http://${BACKEND_IP}:3030" >> frontend/.env
             cat frontend/.env
-            # - restore_cache:
-            #     keys: [frontend-build]
+      # - restore_cache:
+      #     keys: [frontend-build]
       - run:
           name: Deploy frontend objects
           command: |
@@ -304,9 +305,9 @@ jobs:
             npm run build
             tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
             aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
-            
-      - destroy-environment
-      - revert-migrations  
+      # Here's where you will add some code to rollback on failure      
+      - destroy-environment: 
+           
 
   deploy-backend:
     docker:
@@ -314,7 +315,8 @@ jobs:
     steps:
       - checkout
       - add_ssh_keys:
-          fingerprints: ["24:18:4a:00:d3:99:96:97:24:48:8a:d6:29:ad:2e:7e"]
+                # You can get this ID in the section where you registered the SSH Key
+                fingerprints: ["74:c9:22:97:79:b1:38:90:d5:a4:80:af:4a:ba:0d:2f"] 
       - attach_workspace:
           at: ~/
       - run:
@@ -341,7 +343,9 @@ jobs:
             cat inventory.txt
             ansible-playbook -i inventory.txt deploy-backend.yml
       - destroy-environment:
+          
       - revert-migrations:
+               
 workflows:
   default:
     jobs:
