--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -342,9 +342,9 @@ jobs:
             echo "Contents  of the inventory.txt file is -------"
             cat inventory.txt
             ansible-playbook -i inventory.txt deploy-backend.yml
-      - destroy-environment:
+      - destroy-environment
           
-      - revert-migrations:
+      - revert-migrations
                 
 workflows:
   default:
