--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -242,8 +242,8 @@ jobs:
 
   run-migrations:
     docker:
-      - image: circleci/node:13.8.0
-      # Docker image here that supports NodeJS
+      - image: cimg/python:3.10
+      
     steps:
       - checkout
       # - run:
@@ -252,6 +252,8 @@ jobs:
       #       apk add --update --no-cache tar gzip nodejs npm aws-cli curl      
       - restore_cache:
           keys: [backend-build]
+      - install_awscli
+      - install_nodejs    
       - run:  
           name: Run Migration
           command: |
@@ -265,10 +267,13 @@ jobs:
           command: |
             if grep -q "has been executed successfully." ~/project/backend/migrations.txt
             then
-              curl  https://kvdb.io/Et2YY1zaLRkzQYqa567g5/migration_${CIRCLE_WORKFLOW_ID:0:7} -d '1'
-            fi  
-      - destroy-environment  
-            
+              curl  https://kvdb.io/${KVDB_BUCKET}/migration_${CIRCLE_WORKFLOW_ID:0:7} -d '1'
+            else
+            echo "No migrations are pending" 
+            fi
+
+      - destroy-environment 
+   
 
   deploy-frontend:
     docker:
